src/objects/CventEvents__EventInvitationConfiguration__c.object
<CustomObject>
    <description>Stores event invitation configuration defined in Cvent.</description>
    <fields>
        <fullName>CventEvents__ConfigurationStub__c</fullName>
        <externalId>true</externalId>
        <label>Configuration Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EmailDisplayName__c</fullName>
        <label>Email Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EmailName__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EmailStub__c</fullName>
        <label>Email Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventStub__c</fullName>
        <externalId>true</externalId>
        <label>Event Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Event__c</fullName>
        <label>Event</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>Event Invitation Configurations</relationshipLabel>
        <relationshipName>EventInvitationConfigurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__ListName__c</fullName>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ListStub__c</fullName>
        <label>List Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>Event Invitation Configuration</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Event__c</columns>
        <columns>CventEvents__EmailDisplayName__c</columns>
        <columns>CventEvents__EmailName__c</columns>
        <columns>CventEvents__ListName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EIC-{00000000}</displayFormat>
        <label>Event Invitation Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Invitation Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>